# labsC

lab1/: CMakeLists.txt  README.md  main.cpp
lab1/include/: Cluster.h  ClusterNode.h  CpuSpec.h  GpuSpec.h  LanSpec.h  RamSpec.h
lab1/src/: Cluster.cpp  ClusterNode.cpp  CpuSpec.cpp  GpuSpec.cpp  LanSpec.cpp  RamSpec.cpp
lab1/tests/: test_cluster.cpp
lab2/: CMakeLists.txt  README.md
lab2/include/: MatrixBase.h  MatrixBlock.h  MatrixDense.h  MatrixDense.inl  MatrixDiagonal.h
lab2/src/: MatrixBlock.cpp  MatrixDense.cpp  MatrixDiagonal.cpp  main.cpp
lab2/tests/: TestMain.cpp  TestMatrixBlock.cpp  TestMatrixDense.cpp  TestMatrixDiagonal.cpp
lab3/: CMakeLists.txt  README.md
lab3/include/: Vector.h  Vector.inl  VectorBase.h
lab3/src/: main.cpp
